<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
            android:id="@+id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/urut_berdasarkan"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:layout_marginStart="15dp"
            android:layout_width="240dp"
            android:layout_height="20dp"
            android:layout_marginEnd="15dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_begin_inputlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="#c1c2c4">

        <EditText
            android:id="@+id/date_begin_input"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_toggle"
            android:drawableStart="@drawable/ic_action_date"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="@string/tanggal_awal"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/date_end_inputlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/date_begin_inputlayout"
        app:layout_constraintStart_toStartOf="@id/date_begin_inputlayout"
        android:textColorHint="#c1c2c4">

        <EditText
            android:id="@+id/date_end_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_toggle"
            android:drawableStart="@drawable/ic_action_date"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:hint="@string/tanggal_terakhir"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/date_end_inputlayout"
        app:layout_constraintEnd_toEndOf="@id/date_end_inputlayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:cornerRadius="15dp"
        android:id="@+id/btn_filter"
        android:layout_marginBottom="15dp"
        android:text="@string/tampilkan"
        android:backgroundTint="#32599c"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>