<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:translationZ="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:indeterminate="true"
                android:indeterminateTint="#2ECC71"
                android:max="100"
                android:visibility="gone" />
        </FrameLayout>

        <ImageView
            android:layout_width="384dp"
            android:layout_height="283dp"
            android:layout_marginStart="160dp"
            android:contentDescription="@string/header"
            android:scaleType="fitXY"
            android:src="@drawable/header"
            app:layout_constraintBottom_toTopOf="@+id/tv_hello"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/halo"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="65sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="Masuk Untuk Menggunakan Aplikasi"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv_hello"
            app:layout_constraintStart_toStartOf="@id/tv_hello"
            app:layout_constraintTop_toBottomOf="@+id/tv_hello" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_inputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp"
            android:textColorHint="#c1c2c4"
            app:layout_constraintEnd_toEndOf="@+id/tv_signin"
            app:layout_constraintStart_toStartOf="@+id/tv_signin"
            app:layout_constraintTop_toBottomOf="@+id/tv_signin">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_toggle"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#c1c2c4" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_inputlayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp"
            android:textColorHint="#c1c2c4"
            app:layout_constraintEnd_toEndOf="@+id/email_inputlayout"
            app:layout_constraintStart_toStartOf="@+id/email_inputlayout"
            app:layout_constraintTop_toBottomOf="@+id/email_inputlayout"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_toggle"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:drawablePadding="8dp"
                android:hint="@string/kata_sandi"
                android:inputType="textPassword"
                android:textColorHint="#c1c2c4" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/sign_in"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/login_button"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintTop_toTopOf="@+id/login_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#E12E46"
            android:enabled="false"
            app:cornerRadius="17dp"
            app:icon="@drawable/arrow"
            app:iconSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_inputlayout" />

        <ImageView
            android:layout_width="218dp"
            android:layout_height="164dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/footer"
            android:scaleType="fitXY"
            android:src="@drawable/footer2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
